# stockhai

./: .gitignore  LICENSE  README.md  index.html  results.json
backend/: Cargo.toml
backend/data/: companies.json  config.json  game_events.jsonl  users.json
backend/src/: lib.rs  main.rs
backend/src/api/: ws.rs
backend/src/config/: mod.rs
backend/src/domain/: constants.rs  error.rs  mod.rs  models.rs  repositories.rs  ui_models.rs
backend/src/domain/common/: mod.rs  types.rs
backend/src/domain/market/: candle.rs  chat.rs  company.rs  mod.rs
backend/src/domain/trading/: mod.rs  order.rs  order_entity.rs  orderbook.rs  trade.rs
backend/src/domain/user/: mod.rs  portfolio.rs  role.rs  user_entity.rs
backend/src/infrastructure/: id_generator.rs  mod.rs  shutdown.rs
backend/src/infrastructure/persistence/: memory.rs  mod.rs
backend/src/presentation/: mod.rs
backend/src/presentation/websocket/: connection.rs  mod.rs  state.rs
backend/src/presentation/websocket/handlers/: admin.rs  auth.rs  (+5 more)
backend/src/service/: admin.rs  chat.rs  engine.rs  event_log.rs  indices.rs  leaderboard.rs  market.rs  mod.rs  news.rs  orders.rs  persistence.rs  session.rs  token.rs  trade_history.rs
backend/tests/: admin_tests.rs  auth_tests.rs  broadcast_tests.rs  comprehensive_coverage_tests.rs  concurrency_tests.rs  deep_coverage_tests.rs  e2e_websocket_tests.rs  edge_case_tests.rs  persistence_tests.rs  security_tests.rs  service_coverage_tests.rs  state_machine_tests.rs  state_verification_tests.rs  trading_tests.rs  validation_tests.rs
backend/tests/common/: mod.rs
(+135 files in other folders)
