[package]
name = "stockmart-backend"
version = "0.1.0"
edition = "2021"

[lib]
name = "stockmart_backend"
path = "src/lib.rs"

[[bin]]
name = "stockmart-backend"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dashmap = "5.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
futures = "0.3"
async-trait = "0.1"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
rand = "0.8"
lazy_static = "1.4"
uuid = { version = "1.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
hex = "0.4"

[dev-dependencies]
futures-util = "0.3.31"
tempfile = "3.23.0"
tokio-tungstenite = { version = "0.28.0", features = ["connect"] }
